Fix spacing and flex errors

--- a/css/main.css
+++ b/css/main.css
@@ -7,16 +7,17 @@ html {
 }
 
 h1 {
-  font-family: "Merriweather", serif;
+  font-family: Merriweather, serif;
   font-size: 2rem;
   color: #fff;
   text-align: center;
   padding: .5em 0;
   margin-top: 0;
+  margin-bottom: 0;
 }
 
 nav {
-  font-family: "Merriweather", serif;
+  font-family: Merriweather, serif;
   font-size: 1.125rem;
   color: #d05c2e;
   text-align: center;
@@ -35,7 +36,7 @@ a {
   text-decoration: none;
   color: #fff;
   padding: .2em .5em .3em;
-  display: flex;
+  display: block;
   background-color: #d05c2e;
 }
 
@@ -43,13 +44,17 @@ ul {
   list-style-type: none;
   padding: 0;
   margin: 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 li {
-  display: inline-block;
   border-width: 1px;
   border-color: #a63f38;
   border-style: solid;
+  width: 33.3333%;
+  text-align: center;
 }
 
 header {
@@ -60,7 +65,14 @@ body {
   margin: 0;
 }
 
-img {
-  display: block;
+.left,
+.right {
+  display: inline-block;
   width: 40px;
+}
+
+div {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
